--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <span></span>
             </div>
             <ul class="nav">
-                <li><a href="#home" class="acive"><i class="fa fa-home"></i> Home</a></li>
+                <li><a href="#home" class="active"><i class="fa fa-home"></i> Home</a></li>
                 <li><a href="#about"><i class="fa fa-user"></i> About</a></li>
                 <li><a href="#service"><i class="fa fa-list"></i> Services</a> </li>
                 <li><a href="#portfolio"><i class="fa fa-briefcase"></i> Portfolio</a></li>
@@ -50,7 +50,7 @@
                             <h3 class="hello">Hello, my name is <span class="name">Dennis Mungai</span></h3>
                             <h3 class="my-profession">I' m a <span class="typing">Web Developer</span></h3>
                             <p>I'm a web designer with extensive experience for over 10 years. My expertise is to create and design websites, graphic design, and many more...</p>
-                            <a href="#contact" class="btn hire-me">Hire Me</a>
+                            <a href="#" class="btn">Download CV</a>
                         </div>
                         <div class="home-img padd-15">
                             <img src="/assets/images/prof.jpeg" alt="">
@@ -108,7 +108,7 @@
                                     <div class="row">
                                         <div class="buttons padd-15">
                                             <a href="#" class="btn">Download CV</a>
-                                            <a href="#contact" class="btn hire-me">Hire Me</a>
+                                            <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
                                         </div>
                                     </div>
                                 </div>
