--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="row">
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello, my name is <span class="name">Dennis Mungai</span></h3>
-                            <h3 class="my-profession">I' m a <span class="typing">Web Developer</span></h3>
+                            <h3 class="my-profession">I' m a <span class="typing">web designer</span></h3>
                             <p>I'm a web designer with extensive experience for over 10 years. My expertise is to create and design websites, graphic design, and many more...</p>
                             <a href="#" class="btn">Download CV</a>
                         </div>
