fixed some bugs

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <li><a href="#service"><i class="fa fa-list"></i> Services</a> </li>
                 <li><a href="#portfolio"><i class="fa fa-briefcase"></i> Portfolio</a></li>
                 <li><a href="#contact"><i class="fa fa-comments"></i> Contact</a></li>
+                <li><a href="#"><i class="fa fab fa-whatsapp"></i></a></li>
             </ul>
             <!-- nav end -->
         </div>
@@ -48,9 +49,9 @@
                     <div class="row">
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello, my name is <span class="name">Dennis Mungai</span></h3>
-                            <h3 class="my-profession">I' m a <span class="typing">web designer</span></h3>
+                            <h3 class="my-profession">I' m a <span class="typing">Web Developer</span></h3>
                             <p>I'm a web designer with extensive experience for over 10 years. My expertise is to create and design websites, graphic design, and many more...</p>
-                            <a href="#" class="btn">Download CV</a>
+                            <a href="#contact" class="btn hire-me">Hire Me</a>
                         </div>
                         <div class="home-img padd-15">
                             <img src="/assets/images/prof.jpeg" alt="">
@@ -108,7 +109,7 @@
                                     <div class="row">
                                         <div class="buttons padd-15">
                                             <a href="#" class="btn">Download CV</a>
-                                            <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
+                                            <a href="#contact" class="btn hire-me">Hire Me</a>
                                         </div>
                                     </div>
                                 </div>
