--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/assets/images/portfolio/portfolio-1.jpg" alt="">
+                                    <!-- <img src="/assets/images/portfolio/portfolio-1.jpg" alt=""> -->
                                 </div>
                             </div>
                         </div>
@@ -300,7 +300,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/assets/images/portfolio/portfolio-2.jpg" alt="">
+                                    <!-- <img src="/assets/images/portfolio/portfolio-2.jpg" alt=""> -->
                                 </div>
                             </div>
                         </div>
@@ -309,7 +309,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/assets/images/portfolio/portfolio-3.jpg" alt="">
+                                    <!-- <img src="/assets/images/portfolio/portfolio-3.jpg" alt=""> -->
                                 </div>
                             </div>
                         </div>
@@ -318,7 +318,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/assets/images/portfolio/portfolio-4.jpg" alt="">
+                                    <!-- <img src="/assets/images/portfolio/portfolio-4.jpg" alt=""> -->
                                 </div>
                             </div>
                         </div>
@@ -327,7 +327,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/assets/images/portfolio/portfolio-5.jpg" alt="">
+                                    <!-- <img src="/assets/images/portfolio/portfolio-5.jpg" alt=""> -->
                                 </div>
                             </div>
                         </div>
@@ -336,7 +336,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/assets/images/portfolio/portfolio-6.jpg" alt="">
+                                    <!-- <img src="/assets/images/portfolio/portfolio-6.jpg" alt=""> -->
                                 </div>
                             </div>
                         </div>
